[package]
name = "ddc-macos"
version = "0.2.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
description = "DDC/CI monitor control on MacOS"
documentation = "http://haimgel.github.io/ddc-macos-rs/ddc_macos"
readme = "README.md"
repository = "https://github.com/haimgel/ddc-macos-rs"
license = "MIT"
keywords = ["ddc", "mccs", "vcp", "vesa", "macos"]
categories = ["hardware-support", "os::macos-apis"]
edition = "2021"

[dependencies]
core-foundation = "^0.9.1"
core-foundation-sys = "^0.8.1"
core-graphics = "^0.22.1"
ddc = "^0.2.0"
io-kit-sys = "0.1.0"
mach = "^0.3.2"
thiserror = "^1"
edid = "0.3.0"

[badges]
maintenance = { status = "actively-developed" }
