[package]
name = "ddc-macos"
version = "0.2.2"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
description = "DDC/CI monitor control on MacOS"
documentation = "https://haimgel.github.io/ddc-macos-rs/ddc_macos"
readme = "README.md"
repository = "https://github.com/haimgel/ddc-macos-rs"
license = "MIT"
keywords = ["ddc", "mccs", "vcp", "vesa", "macos"]
categories = ["hardware-support", "os::macos-apis"]
edition = "2021"

[dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"
# ddc must stay on "0.2" till ddc-hi is also updated
ddc = "0.2"
io-kit-sys = "0.4"
mach2 = "0.4"
thiserror = "1.0"

[dev-dependencies]
edid-rs = "0.1"
nom = "7.1"

[badges]
maintenance = { status = "actively-developed" }
